deleted site folder

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,18 +1,18 @@
 <ul class="clearfix menu {{include.navclass}}">
 	<li><a href="/">Home</a></li>
-	<li class="sub"><a href="#!">Corporate</a>
+	<li class="sub"><a href="/about-us/">Corporate</a>
 		<ul>
-			<li><a href="#!">About Us</a></li>
-			<li><a href="#!">Listed Companies</a></li>
+			<li><a href="/corporate/about-us/">About Us</a></li>
+			<li><a href="/corporate/listed/">Listed Companies</a></li>
 		</ul>
 	</li>
-	<li class="sub"><a href="#!">Our Services</a>
+	<li class="sub"><a href="/services/investing/">Our Services</a>
 		<ul>
-			<li><a href="#!">CrowdFunding Services</a></li>
+			<li><a href="/services/investing/">CrowdFunding Services</a></li>
 			<li><a href="#!">Consultancy Services</a></li>
 		</ul>
 	</li>
-	<li><a href="#!">FAQ</a></li>
-	<li><a href="#!">News</a></li>
-	<li><a href="#!">Contact Us</a></li>
+	<li><a href="/faq/">FAQ</a></li>
+	<li><a href="/news/">News</a></li>
+	<li><a href="/contact-us/">Contact Us</a></li>
 </ul>
