--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   	<!-- Favicons -->
-  	<!-- <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.png"> -->
+  	<link rel="shortcut icon" type="image/x-icon" href="/img/favicon.png">
 
   	<!-- Css -->
   	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
@@ -30,7 +30,7 @@
           <!-- Header Top -->
           <div class="header-top">
             <ul class="clearfix">
-              <li class="ht-phone">+632 650 6565xxxx</li>
+              <li class="ht-phone">+632 650 6565</li>
               <li class="ht-lang">
                 <div class="lang-select">
                   <ul>
@@ -73,99 +73,7 @@
           <!-- Header Bottom End -->
         </div>
       </div>
-      <div class="site-slider">
-      	<div class="bx-wrapper" style="max-width: 100%;">
-      		<div class="bx-viewport" style="width: 100%; overflow: hidden; position: relative; height: 607px;">
-      			<ul class="bxslider" style="width: auto; position: relative;">
-      				<li style="float: none; list-style: none; position: absolute; width: 1261px; z-index: 0; display: none; background-image: url('/img/slide-1.jpg');">
-      					<div class="slide-image">
-      						<img src="/img/slide-1.jpg" alt="Slide">
-      					</div>
-      					<div class="slide-caption shadow">
-      						<div class="caption-wrapper">
-      							<p class="text-2">INVEST | GO PUBLIC</p>
-      							<p class="text-1">INVEST IN PROFITABLE COMPANIES</p>
-      							<p class="text-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec leo nec nibh feugiat rutrum. Nulla placerat ligula at elit ornare, nec laoreet dui gravida.</p>
-      							<p><a href="#!" class="btn btn-black">FIND OUT MORE <i class="fa fa-angle-right right"></i></a>
-      							</p>
-      						</div>
-      					</div>
-      				</li>
-      				<li style="float: none; list-style: none; position: absolute; width: 1261px; z-index: 0; display: none; background-image: url('/img/slide-2.jpg');">
-      					<div class="slide-image">
-      						<img src="/img/slide-3.jpg" alt="Slide">
-      					</div>
-      					<div class="slide-caption shadow">
-      						<div class="caption-wrapper">
-      							<p class="text-2">INVEST | GO PUBLIC</p>
-      							<p class="text-1">WHAT WE INVEST</p>
-      							<p class="text-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec leo nec nibh feugiat rutrum. Nulla placerat ligula at elit ornare, nec laoreet dui gravida.</p>
-      							<p><a href="#!" class="btn btn-black">FIND OUT MORE <i class="fa fa-angle-right right"></i></a>
-      							</p>
-      						</div>
-      					</div>
-      				</li>
-      				<li style="float: none; list-style: none; position: absolute; width: 1261px; z-index: 50; display: list-item; background-image: url('/img/slide-3.jpg');">
-      					<div class="slide-image">
-      						<img src="/img/slide-4.jpg" alt="Slide">
-      					</div>
-      					<div class="slide-caption shadow">
-      						<div class="caption-wrapper">
-      							<p class="text-2">INVEST | GO PUBLIC</p>
-      							<p class="text-1">WHY BRITISH CAMBRIDGE</p>
-      							<p class="text-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec leo nec nibh feugiat rutrum. Nulla placerat ligula at elit ornare, nec laoreet dui gravida.</p>
-      							<p><a href="#!" class="btn btn-black">FIND OUT MORE <i class="fa fa-angle-right right"></i></a>
-      							</p>
-      						</div>
-      					</div>
-      				</li>
-      				<li style="float: none; list-style: none; position: absolute; width: 1261px; z-index: 0; display: none; background-image: url('/img/slide-5.jpg');">
-      					<div class="slide-image">
-      						<img src="/img/slide-5.jpg" alt="Slide">
-      					</div>
-      					<div class="slide-caption shadow">
-      						<div class="caption-wrapper">
-      							<p class="text-2">INVEST | GO PUBLIC</p>
-      							<p class="text-1">HOW WE INVEST</p>
-      							<p class="text-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec leo nec nibh feugiat rutrum. Nulla placerat ligula at elit ornare, nec laoreet dui gravida.</p>
-      							<p><a href="#!" class="btn btn-black">FIND OUT MORE <i class="fa fa-angle-right right"></i></a>
-      							</p>
-      						</div>
-      					</div>
-      				</li>
-      			</ul>
-      		</div>
-      		<div class="bx-controls bx-has-controls-auto">
-      			<div class="bx-controls-auto">
-      				<div class="bx-controls-auto-item"><a class="bx-start active" href="">Start</a>
-      				</div>
-      				<div class="bx-controls-auto-item"><a class="bx-stop" href="">Stop</a>
-      				</div>
-      			</div>
-      		</div>
-      	</div>
-      	<div class="bx-pager-thumbs">
-      		<div class="site-wrapper">
-      			<ul class="clearfix">
-      				<li style="width: 25%;">
-      					<a data-slide-index="0" href="#!" style="background-image: url(/img/slide-1.jpg)" class=""></a>
-      				</li>
-      				<li style="width: 25%;">
-      					<a data-slide-index="1" href="#!" style="background-image: url(/img/slide-3.jpg)" class=""></a>
-      				</li>
-      				<li style="width: 25%;">
-      					<a data-slide-index="2" href="#!" style="background-image: url(/img/slide-4.jpg)" class="active"></a>
-      				</li>
-      				<li style="width: 25%;">
-      					<a data-slide-index="3" href="#!" style="background-image: url(/img/slide-5.jpg)" class=""></a>
-      				</li>
-      			</ul>
-      		</div>
-      	</div>
-      </div>
-    </header>
-
-    {{content}}
+      {{content}}
 
     <footer>
   		<div class="site-wrapper">
