--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,17 +10,17 @@
 				<li>
 					<h4>CORPORATE</h4>
 				</li>
-				<li><a href="#!">ABOUT US</a>
+				<li><a href="/corporate/about-us/">ABOUT US</a>
 				</li>
-				<li><a href="#!">MEET THE TEAM</a>
+				<li><a href="/corporate/about-us/">MEET THE TEAM</a>
 				</li>
-				<li><a href="#!">CONTACT US</a>
+				<li><a href="/contact-us/">CONTACT US</a>
 				</li>
-				<li><a href="#!">CONSULT US</a>
+				<li><a href="/contact-us/">CONSULT US</a>
 				</li>
 				<li><a href="#!">COMMUNITY PROGRAMS</a>
 				</li>
-				<li><a href="#!">FAQ</a>
+				<li><a href="/faq/">FAQ</a>
 				</li>
 				<li><a href="#!">PARTNER US</a>
 				</li>
@@ -30,15 +30,13 @@
 				<li>
 					<h4>COMPANY LISTED</h4>
 				</li>
-				<li><a href="#!">APPSOURCE</a>
+				<li><a href="http://appsource.biz/">APPSOURCE</a>
 				</li>
-				<li><a href="#!">BRITISH CAMBRIDGE</a>
+				<li><a href="http://www.bccolleges.co.uk/">BRITISH CAMBRIDGE COLLEGE</a>
 				</li>
-				<li><a href="#!">SERVEBANK FINANCIAL</a>
+				<li><a href="http://www.servebank.org/">SERVEBANK FINANCIAL</a>
 				</li>
-				<li><a href="#!">CAMBRIDGE MEDICAL GROUP</a>
-				</li>
-				<li><a href="#!">THE CAMBRIDGE PROPERTIES</a>
+				<li><a href="http://www.cambridgemedical.org/">CAMBRIDGE MEDICAL GROUP</a>
 				</li>
 			</ul>
 			<ul>
@@ -73,14 +71,8 @@
 	<div class="fm-social">
 		<h4>FOLLOW US SOCIAL MEDIA</h4>
 		<ul class="social-icons social-round clearfix">
-			<li class="facebook"><a href="#!"><i class="fa fa-facebook"></i></a>
-			</li>
-			<li class="twitter"><a href="#!"><i class="fa fa-twitter"></i></a>
-			</li>
-			<li class="linkedin"><a href="#!"><i class="fa fa-linkedin"></i></a>
-			</li>
-			<li class="google-plus"><a href="#!"><i class="fa fa-google-plus"></i></a>
-			</li>
+			<li class="facebook"><a href="#!"><i class="fa fa-facebook"></i></a></li>
+			<li class="linkedin"><a href="#!"><i class="fa fa-linkedin"></i></a></li>
 		</ul>
 	</div>
 	<div class="fm-newsletter">
