--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,8 +8,8 @@
 	</li>
 	<li class="sub"><a href="/services/investing/">Our Services</a>
 		<ul>
-			<li><a href="/services/investing/">CrowdFunding Services</a></li>
-			<li><a href="#!">Consultancy Services</a></li>
+			<li><a href="/services/investing/">Investing</a></li>
+			<li><a href="#!">How to get listed</a></li>
 		</ul>
 	</li>
 	<li><a href="/faq/">FAQ</a></li>
