--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('./fonts/fontello.eot?41030601');
-  src: url('./fonts/fontello.eot?41030601#iefix') format('embedded-opentype'),
-       url('./fonts/fontello.woff?41030601') format('woff'),
-       url('./fonts/fontello.ttf?41030601') format('truetype'),
-       url('./fonts/fontello.svg?41030601#fontello') format('svg');
+  src: url('./fonts/fontello.eot');
+  src: url('./fonts/fontello.eot') format('embedded-opentype'),
+       url('./fonts/fontello.woff') format('woff'),
+       url('./fonts/fontello.ttf') format('truetype'),
+       url('./fonts/fontello.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?41030601#fontello') format('svg');
+    src: url('../font/fontello.svg?16458999#fontello') format('svg');
   }
 }
 */
@@ -56,3 +56,14 @@
 
 .icon-stick-man104:before { content: '\e800'; } /* '' */
 .icon-search-engine-optimization:before { content: '\e801'; } /* '' */
+.icon-glyph:before { content: '\e802'; } /* '' */
+.icon-glyph-1:before { content: '\e803'; } /* '' */
+.icon-glyph-2:before { content: '\e804'; } /* '' */
+.icon-glyph-3:before { content: '\e805'; } /* '' */
+.icon-glyph-4:before { content: '\e806'; } /* '' */
+.icon-glyph-5:before { content: '\e807'; } /* '' */
+.icon-glyph-6:before { content: '\e808'; } /* '' */
+.icon-glyph-7:before { content: '\e809'; } /* '' */
+.icon-glyph-8:before { content: '\e80a'; } /* '' */
+.icon-glyph-9:before { content: '\e80b'; } /* '' */
+.icon-glyph-10:before { content: '\e80c'; } /* '' */
