--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -52,13 +52,13 @@
 				<li>
 					<h4>QUICK LINKS</h4>
 				</li>
-				<li><a href="#!">COPYRIGHTS</a>
+				<li><a href="/copyrights/">COPYRIGHTS</a>
 				</li>
-				<li><a href="#!">DISCLAIMER</a>
+				<li><a href="/disclaimer/">DISCLAIMER</a>
 				</li>
-				<li><a href="#!">PRIVACY POLICY</a>
+				<li><a href="/privacy/">PRIVACY STATEMENT</a>
 				</li>
-				<li><a href="#!">TERMS OF USE</a>
+				<li><a href="/terms/">TERMS OF USE</a>
 				</li>
 			</ul>
 		</nav>
