--- a/css/style.css
+++ b/css/style.css
@@ -335,9 +335,15 @@ h6 {
 }
 
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0
+  list-style-type: none;
+  margin:0;
+  padding: 0;
+}
+
+ol.list-order {
+    list-style-type: disc;
+    margin:0;
+    padding-right:5px;
 }
 
 button {
